# verdi-aggregation

./: .gitignore  .travis-ci.sh  .travis.yml  Makefile  README.md  aggregation-dynamic.install  aggregation-dynamic.opam  configure  verdi-aggregation-proofalytics.opam  verdi-aggregation.opam
.travis/: travis_rsa.enc  travis_rsa.pub
config/: deploy.rb
config/deploy/: production.rb
core/: GhostSimul.v  GhostSimulations.v  LabeledNet.v  NameOverlay.v  Net.v  OrderedAux.v  OrderedLemmas.v  PartialExtendedMapSimulations.v  PartialMapExecutionSimulations.v  PartialMapLivenessSimulations.v  PartialMapSimulations.v  Simul.v  Simulations.v  StatePacketPacketDecomposition.v  TotalMapExecutionSimulations.v  TotalMapLivenessSimulations.v  TotalMapSimulations.v  Util.v  infseq.v  infseq_aux.v
extraction/aggregation/: .gitignore  Makefile
extraction/aggregation-dynamic/: .gitignore  Makefile
extraction/aggregation-dynamic/coq/: ExtractTree.v  ExtractTreeAggregation.v  ExtractTreeAggregationDynamic.v  ExtractionDeps.v  (+5 more)
extraction/tree/: .gitignore  Makefile
extraction/tree-dynamic/: .gitignore  Makefile
extraction/zaggregation-dynamic/: .gitignore  Makefile
lib/: AggregationAux.v  AggregationDefinitions.v  BAddGroup.v  BAddMul.v  BBase.v  BDef.v  BvectorCommutativeFinGroup.v  ExtrOcamlFin.v  NameAdjacency.v  NatPowLt.v  ProdCommutativeFinGroup.v  TreeAux.v  ZpCommutativeFinGroup.v  ZpProdCommutativeFinGroup.v  commfingroup.v  serializable.v  serializablecommfingroup.v  serializablefingroup.v
proofalytics/: proof-timer.sh
raft/: CommonDefinitions.v  CommonTheorems.v  Raft.v  RefinementSpecLemmas.v  SpecLemmas.v
raft-proofs/: AppliedEntriesMonotonicProof.v  InputBeforeOutputProof.v  LeaderCompletenessProof.v  LeaderLogsVotesWithLogProof.v  StateMachineSafetyPrimeProof.v
script/: aggregation-dynamic-test.sh  aggregation-test.sh  find-bad-imports.sh  tree-dynamic-test.sh  tree-test.sh  tree_safety.txt
systems/: Aggregation.v  AggregationAux.v  AggregationDefinitions.v  AggregationDynamic.v  AggregationDynamicCorrect.v  AggregationStatic.v  AggregationStaticCorrect.v  AggregatorDynamic.v  AggregatorStatic.v  FailureRecorderDynamic.v  FailureRecorderDynamicCorrect.v  FailureRecorderDynamicLabeled.v  FailureRecorderDynamicLabeledCorrect.v  FailureRecorderStatic.v  FailureRecorderStaticCorrect.v  FailureRecorderStaticLabeled.v  FailureRecorderStaticLabeledCorrect.v  LockServ.v  PrimaryBackup.v  SeqNum.v  SeqNumCorrect.v  Tree.v  TreeAggregationDynamic.v  TreeAggregationDynamicCorrect.v  TreeAggregationDynamicLabeled.v  TreeAggregationDynamicLabeledCorrect.v  TreeAggregationDynamicSerialized.v  TreeAggregationStatic.v  TreeAggregationStaticCorrect.v  TreeAggregationStaticLabeled.v  TreeAggregationStaticLabeledCorrect.v  TreeAux.v  TreeDynamic.v  TreeDynamicCorrect.v  TreeDynamicLabeled.v  TreeStatic.v  TreeStaticCorrect.v  TreeStaticLabeled.v  TreeStaticLabeledCorrect.v  VarDPrimaryBackup.v  (+4 more)
(+67 files in other folders)
