opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/DistributedComponents/verdi-aggregation"
dev-repo: "https://github.com/DistributedComponents/verdi-aggregation.git"
bug-reports: "https://github.com/DistributedComponents/verdi-aggregation/issues"
license: "Proprietary"

build: [
  [ "./configure" ]
  [ make "-j%{jobs}%" ]
]
depends: [
  "coq" {>= "8.6" & < "8.7~"}
  "coq-mathcomp-ssreflect" {>= "1.6" & < "1.7~"}
  "coq-mathcomp-algebra" {>= "1.6" & < "1.7~"}
  "coq-mathcomp-fingroup" {>= "1.6" & < "1.7~"}
  "coq-aac-tactics" {>= "8.6.1"}
  "verdi" {= "dev"}
  "StructTact" {= "dev"}
  "InfSeqExt" {= "dev"}
  "cheerios" {= "dev"}
  "verdi-cheerios" {= "dev"}
]

tags: [
  "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
  "keyword:program verification"
  "keyword:distributed algorithms"
]
authors: [
  "Karl Palmskog <>"
  "Ryan Doenges <>"
]
